# experiment-concurrent-primitives-bench

./: concurrent-primitives-bench.cabal
app/: Main.hs
reports/Windows7_Corei5-2.4GHz/: report_cost.html  report_speed.html
