name:                concurrent-primitives-bench
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              asakamirai
maintainer:          asakamirai
copyright:           2015 Asakamirai
category:            Experiment
build-type:          Simple
cabal-version:       >=1.10

executable concurrent-primitives-bench
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , primitive >= 0.6
                     , atomic-primops >= 0.8
                     , async >= 2.0.0.0
                     , criterion >= 1.1.0.0
                     , stm >= 2.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asakamirai/experiment-concurrent-primitives-bench.git
